Partial fix for bug #691172: The tiff resolution tags are floating point values and need to be passed as such to TIFFSetField.

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@10925 a1074d23-0009-0410-80fe-cf8c14f379e6